feat(plugins): Download remote plugins (#358)